--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <input id="msgInput" style="width: 200px;"/>
         <button onclick="lsbridge.send('vue-widget', document.querySelector('#msgInput').value);">SEND MESSAGE</button>
 
-        <script src="https://cdn.jsdelivr.net/npm/lsbridge@0.2.0/build/lsbridge.min.js" type="text/javascript"></script>
-        <script src="dashboard.js" type="text/javascript"></script>
+        <script src="lsbridge.min.js" type="text/javascript"></script>
+        <script src="dashboard.js" type="module"></script>
     </body>
     <footer>
 
